# asimov-cli

./: .gitignore  .mcp.json  README.md  api_server.py  cancel_all_jobs.py  command.txt  deepseek.py  get_auth_token.js  main.py  my_job.yaml  pyproject.toml  requirements.txt  ssh-keygen -t ed25519  ssh-keygen -t ed25519.pub  text.py  vast_manager.py
CLI/: text.py  training-cli.py
Instructions/: Coding-Dataset-Support-Matrix.md  command.txt  instructions.md  mistral.md  vast_docs.md
async/: async_main.py  async_utils.py  async_vast_manager.py
jobs/: 105d3c62-def4-4f23-85af-52a6399796d2_status.json  139d2b1a-cf25-48ff-8491-617c7aaabc49_status.json  18e23b4e-8ab1-4406-85f8-555a36f410b5_status.json  1e55c2dc-c876-4715-97b0-499dc7da014e_config.yaml  225a70c2-be12-48bd-8f21-7a50a2ea7d94_status.json  244c8b71-37a6-4c89-8e83-bce3b4160cab_config.yaml  244c8b71-37a6-4c89-8e83-bce3b4160cab_status.json  251fe072-fe1c-462c-aa08-85ce0a424249_status.json  29d7bd2a-6028-421e-b654-e2e3463a2e55_config.yaml  29d7bd2a-6028-421e-b654-e2e3463a2e55_status.json  2c19c328-300a-4b37-ae22-0696827570e0_config.yaml  2c19c328-300a-4b37-ae22-0696827570e0_status.json  31f70fba-fd8b-470a-9062-30e9b3290cae_config.yaml  31f70fba-fd8b-470a-9062-30e9b3290cae_status.json  357ec1f1-f3de-44d1-a1fd-c28a65b4fe86_config.yaml  357ec1f1-f3de-44d1-a1fd-c28a65b4fe86_status.json  38d21c6c-59f3-47dc-90a3-3a6671991955_status.json  3f789766-e7f0-43f7-a291-7dd5033dbdd9_status.json  42e39e70-9cb0-4bf5-8b93-33fb69a9cd04_status.json  451bf3bf-aef4-4ec4-ba72-075abaf597ad_config.yaml  451bf3bf-aef4-4ec4-ba72-075abaf597ad_status.json  4b6c9037-ae2d-41ed-b1f7-6cfed1d09fc9_config.yaml  4d7f4458-809e-41c5-b4c0-271a0651738c_status.json  573ef4ec-14a0-4e30-8452-618cf2f3ec74_config.yaml  573ef4ec-14a0-4e30-8452-618cf2f3ec74_status.json  663480a0-1b53-4e46-b1f1-380d05a24386_config.yaml  663480a0-1b53-4e46-b1f1-380d05a24386_status.json  6af883ea-d56d-4dd2-b388-23c685440790_config.yaml  6af883ea-d56d-4dd2-b388-23c685440790_status.json  72987b82-f407-420e-954a-afb257b0b53c_status.json  76f395be-5463-43f7-a533-e16529033109_status.json  78a74eea-e7a0-4b2c-af5f-6987363e8dce_status.json  81cd6fa8-469e-4cc2-8b49-be3d778a40fe_status.json  81e31ecc-be72-408f-b59a-f157dfb3b0eb_config.yaml  8707d4e5-f9e8-466e-89b7-7488b34be6d1_status.json  8d282ef3-9871-4a5c-b960-e363c5185cd7_config.yaml  8d282ef3-9871-4a5c-b960-e363c5185cd7_status.json  9100a1d5-c00d-4dcc-bfd8-9a84fae37952_config.yaml  9ee40feb-185e-4320-a538-a1434b882c08_status.json  a36c3ea0-95a0-4f93-9fde-21bc2461ac3c_config.yaml  (+16 more)
tests/: targets_checker.py
tests/api/: test_websocket.py
tests/instances/: vast_cancel_all.py  vast_multiple_test.py
tests/models/: targets_checker.py  training_test.py
training/: .env.example  Dockerfile  debug_token.py  intelligent_train.py  lora_instructions.py  requirements.txt  start.sh  start_training.sh  train.py
